--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "prettier": "^1.16.4"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
-    "@react-native-community/art": "^1.1.2"
+    "prop-types": "^15.7.2"
   },
   "typings": "index.d.ts"
 }
